Simplify the use of AWS managed services with Spring Cloud AWS